fixed tiles and made tile container

--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
 		</tr>
 		<tr>
 			<td id="i1" class="tw" ondragover="onDragOver(event);" ondrop="onDrop(event);">TW</td>
-			<td id="i2"  ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
+			<td id="i2" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
 			<td id="i3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
 			<td id="i4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="i5"class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
+			<td id="i5" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
 			<td id="i6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
 			<td id="i7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
 			<td id="i8" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
 			<td id="i9" class="tw" ondragover="onDragOver(event);" ondrop="onDrop(event);">TW</td>
 		</tr>
 	</table>
-	<section id="player-tiles">
-		<div class="tile" id="tile1" draggable='true' ondragstart="onDragStart(event);"></div>
+	<section id="player-tiles" ondragover="onDragOver(event);" ondrop="onDrop(event);">
+		<div class="tile" id="tile1" draggable='true' ondragstart="onDragStart(event);"><p></p><sub></sub></div>
 		<div class="tile" id="tile2" draggable='true' ondragstart="onDragStart(event);"></div>
 		<div class="tile" id="tile3" draggable='true' ondragstart="onDragStart(event);"></div>
 		<div class="tile" id="tile4" draggable='true' ondragstart="onDragStart(event);"></div>
