rewrote drag function

--- a/index.html
+++ b/index.html
@@ -7,116 +7,118 @@
 	<script defer type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+	<h1>Mini Scrabble</h1>
 	<table>
 		<tr>
-			<td id="a1" class="tw" ondragover="onDragOver(event);" ondrop="onDrop(event);">TW</td>
-			<td id="a2" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="a3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="a4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="a5" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
-			<td id="a6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="a7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="a8" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="a9" class="tw" ondragover="onDragOver(event);" ondrop="onDrop(event);">TW</td>
+			<td id="a1" class="tw">TW</td>
+			<td id="a2"></td>
+			<td id="a3"></td>
+			<td id="a4"></td>
+			<td id="a5" class="tl">TL</td>
+			<td id="a6"></td>
+			<td id="a7"></td>
+			<td id="a8"></td>
+			<td id="a9" class="tw">TW</td>
 		</tr>
 		<tr>
-			<td id="b1" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="b2" class="dw" ondragover="onDragOver(event);" ondrop="onDrop(event);">DW</td>
-			<td id="b3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="b4" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="b5" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="b6" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="b7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="b8" class="dw" ondragover="onDragOver(event);" ondrop="onDrop(event);">DW</td>
-			<td id="b9" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
+			<td id="b1"></td>
+			<td id="b2" class="dw">DW</td>
+			<td id="b3"></td>
+			<td id="b4" class="dl">DL</td>
+			<td id="b5"></td>
+			<td id="b6" class="dl">DL</td>
+			<td id="b7"></td>
+			<td id="b8" class="dw">DW</td>
+			<td id="b9"></td>
 		</tr>
 		<tr>
-			<td id="c1" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="c2" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="c3" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
-			<td id="c4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="c5" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="c6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="c7" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
-			<td id="c8" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="c9" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
+			<td id="c1"></td>
+			<td id="c2"></td>
+			<td id="c3" class="tl">TL</td>
+			<td id="c4"></td>
+			<td id="c5"></td>
+			<td id="c6"></td>
+			<td id="c7" class="tl">TL</td>
+			<td id="c8"></td>
+			<td id="c9"></td>
 		</tr>
 		<tr>
-			<td id="d1" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="d2" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="d3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="d4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="d5" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="d6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="d7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="d8" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="d9" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
+			<td id="d1"></td>
+			<td id="d2" class="dl">DL</td>
+			<td id="d3"></td>
+			<td id="d4"></td>
+			<td id="d5"></td>
+			<td id="d6"></td>
+			<td id="d7"></td>
+			<td id="d8" class="dl">DL</td>
+			<td id="d9"></td>
 		</tr>
 		<tr>
-			<td id="e1" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
-			<td id="e2" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="e3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="e4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="e5" class="start" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="e6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="e7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="e8" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="e9" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
+			<td id="e1" class="tl">TL</td>
+			<td id="e2"></td>
+			<td id="e3"></td>
+			<td id="e4"></td>
+			<td id="e5" class="start"></td>
+			<td id="e6"></td>
+			<td id="e7"></td>
+			<td id="e8"></td>
+			<td id="e9" class="tl">TL</td>
 		</tr>
 		<tr>
-			<td id="f1" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="f2" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="f3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="f4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="f5" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="f6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="f7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="f8" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="f9" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
+			<td id="f1"></td>
+			<td id="f2" class="dl">DL</td>
+			<td id="f3"></td>
+			<td id="f4"></td>
+			<td id="f5"></td>
+			<td id="f6"></td>
+			<td id="f7"></td>
+			<td id="f8" class="dl">DL</td>
+			<td id="f9"></td>
 		</tr>
 		<tr>
-			<td id="g1" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="g2" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="g3" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
-			<td id="g4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="g5" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="g6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="g7" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
-			<td id="g8" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="g9" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
+			<td id="g1"></td>
+			<td id="g2"></td>
+			<td id="g3" class="tl">TL</td>
+			<td id="g4"></td>
+			<td id="g5"></td>
+			<td id="g6"></td>
+			<td id="g7" class="tl">TL</td>
+			<td id="g8"></td>
+			<td id="g9"></td>
 		</tr>
 		<tr>
-			<td id="h1" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="h2" class="dw" ondragover="onDragOver(event);" ondrop="onDrop(event);">DW</td>
-			<td id="h3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="h4" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="h5" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="h6" class="dl" ondragover="onDragOver(event);" ondrop="onDrop(event);">DL</td>
-			<td id="h7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="h8" class="dw" ondragover="onDragOver(event);" ondrop="onDrop(event);">DW</td>
-			<td id="h9" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
+			<td id="h1"></td>
+			<td id="h2" class="dw">DW</td>
+			<td id="h3"></td>
+			<td id="h4" class="dl">DL</td>
+			<td id="h5"></td>
+			<td id="h6" class="dl">DL</td>
+			<td id="h7"></td>
+			<td id="h8" class="dw">DW</td>
+			<td id="h9"></td>
 		</tr>
 		<tr>
-			<td id="i1" class="tw" ondragover="onDragOver(event);" ondrop="onDrop(event);">TW</td>
-			<td id="i2" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="i3" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="i4" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="i5" class="tl" ondragover="onDragOver(event);" ondrop="onDrop(event);">TL</td>
-			<td id="i6" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="i7" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="i8" ondragover="onDragOver(event);" ondrop="onDrop(event);"></td>
-			<td id="i9" class="tw" ondragover="onDragOver(event);" ondrop="onDrop(event);">TW</td>
+			<td id="i1" class="tw">TW</td>
+			<td id="i2"></td>
+			<td id="i3"></td>
+			<td id="i4"></td>
+			<td id="i5" class="tl">TL</td>
+			<td id="i6"></td>
+			<td id="i7"></td>
+			<td id="i8"></td>
+			<td id="i9" class="tw">TW</td>
 		</tr>
 	</table>
-	<section id="player-tiles" ondragover="onDragOver(event);" ondrop="onDrop(event);">
-		<div class="tile" id="tile1" draggable='true' ondragstart="onDragStart(event);"><p></p><sub></sub></div>
-		<div class="tile" id="tile2" draggable='true' ondragstart="onDragStart(event);"></div>
-		<div class="tile" id="tile3" draggable='true' ondragstart="onDragStart(event);"></div>
-		<div class="tile" id="tile4" draggable='true' ondragstart="onDragStart(event);"></div>
-		<div class="tile" id="tile5" draggable='true' ondragstart="onDragStart(event);"></div>
-		<div class="tile" id="tile6" draggable='true' ondragstart="onDragStart(event);"></div>
-		<div class="tile" id="tile7" draggable='true' ondragstart="onDragStart(event);"></div>
+	<section id="player-tiles">
+		<div class="tile" id="tile1"></div>
+		<div class="tile" id="tile2"></div>
+		<div class="tile" id="tile3"></div>
+		<div class="tile" id="tile4"></div>
+		<div class="tile" id="tile5"></div>
+		<div class="tile" id="tile6"></div>
+		<div class="tile" id="tile7"></div>
 	</section>
-	<button>Reset Game</button>
+	<button id="reset">Reset Game</button>
+	<button id="submitMove">Submit move</button>
 </body>
 </html>
