fixed labeled tiles

--- a/index.html
+++ b/index.html
@@ -10,51 +10,51 @@
 	<h1>Mini Scrabble</h1>
 	<table>
 		<tr>
-			<td id="a1" class="tw">TW</td>
+			<td id="a1" class="tw"><span>TW</span></td>
 			<td id="a2"></td>
 			<td id="a3"></td>
 			<td id="a4"></td>
-			<td id="a5" class="tl">TL</td>
+			<td id="a5" class="tl"><span>TL</span></td>
 			<td id="a6"></td>
 			<td id="a7"></td>
 			<td id="a8"></td>
-			<td id="a9" class="tw">TW</td>
+			<td id="a9" class="tw"><span>TW</span></td>
 		</tr>
 		<tr>
 			<td id="b1"></td>
-			<td id="b2" class="dw">DW</td>
+			<td id="b2" class="dw"><span>DW</span></td>
 			<td id="b3"></td>
-			<td id="b4" class="dl">DL</td>
+			<td id="b4" class="dl"><span>DL</span></td>
 			<td id="b5"></td>
-			<td id="b6" class="dl">DL</td>
+			<td id="b6" class="dl"><span>DL</span></td>
 			<td id="b7"></td>
-			<td id="b8" class="dw">DW</td>
+			<td id="b8" class="dw"><span>DW</span></td>
 			<td id="b9"></td>
 		</tr>
 		<tr>
 			<td id="c1"></td>
 			<td id="c2"></td>
-			<td id="c3" class="tl">TL</td>
+			<td id="c3" class="tl"><span>TL</span></td>
 			<td id="c4"></td>
 			<td id="c5"></td>
 			<td id="c6"></td>
-			<td id="c7" class="tl">TL</td>
+			<td id="c7" class="tl"><span>TL</span></td>
 			<td id="c8"></td>
 			<td id="c9"></td>
 		</tr>
 		<tr>
 			<td id="d1"></td>
-			<td id="d2" class="dl">DL</td>
+			<td id="d2" class="dl"><span>DL</span></td>
 			<td id="d3"></td>
 			<td id="d4"></td>
 			<td id="d5"></td>
 			<td id="d6"></td>
 			<td id="d7"></td>
-			<td id="d8" class="dl">DL</td>
+			<td id="d8" class="dl"><span>DL</span></td>
 			<td id="d9"></td>
 		</tr>
 		<tr>
-			<td id="e1" class="tl">TL</td>
+			<td id="e1" class="tl"><span>TL</span></td>
 			<td id="e2"></td>
 			<td id="e3"></td>
 			<td id="e4"></td>
@@ -62,51 +62,51 @@
 			<td id="e6"></td>
 			<td id="e7"></td>
 			<td id="e8"></td>
-			<td id="e9" class="tl">TL</td>
+			<td id="e9" class="tl"><span>TL</span></td>
 		</tr>
 		<tr>
 			<td id="f1"></td>
-			<td id="f2" class="dl">DL</td>
+			<td id="f2" class="dl"><span>DL</span></td>
 			<td id="f3"></td>
 			<td id="f4"></td>
 			<td id="f5"></td>
 			<td id="f6"></td>
 			<td id="f7"></td>
-			<td id="f8" class="dl">DL</td>
+			<td id="f8" class="dl"><span>DL</span></td>
 			<td id="f9"></td>
 		</tr>
 		<tr>
 			<td id="g1"></td>
 			<td id="g2"></td>
-			<td id="g3" class="tl">TL</td>
+			<td id="g3" class="tl"><span>TL</span></td>
 			<td id="g4"></td>
 			<td id="g5"></td>
 			<td id="g6"></td>
-			<td id="g7" class="tl">TL</td>
+			<td id="g7" class="tl"><span>TL</span></td>
 			<td id="g8"></td>
 			<td id="g9"></td>
 		</tr>
 		<tr>
 			<td id="h1"></td>
-			<td id="h2" class="dw">DW</td>
+			<td id="h2" class="dw"><span>DW</span></td>
 			<td id="h3"></td>
-			<td id="h4" class="dl">DL</td>
+			<td id="h4" class="dl"><span>DL</span></td>
 			<td id="h5"></td>
-			<td id="h6" class="dl">DL</td>
+			<td id="h6" class="dl"><span>DL</span></td>
 			<td id="h7"></td>
-			<td id="h8" class="dw">DW</td>
+			<td id="h8" class="dw"><span>DW</span></td>
 			<td id="h9"></td>
 		</tr>
 		<tr>
-			<td id="i1" class="tw">TW</td>
+			<td id="i1" class="tw"><span>TW</span></td>
 			<td id="i2"></td>
 			<td id="i3"></td>
 			<td id="i4"></td>
-			<td id="i5" class="tl">TL</td>
+			<td id="i5" class="tl"><span>TL</span></td>
 			<td id="i6"></td>
 			<td id="i7"></td>
 			<td id="i8"></td>
-			<td id="i9" class="tw">TW</td>
+			<td id="i9" class="tw"><span>TW</span></td>
 		</tr>
 	</table>
 	<section id="player-tiles">
