--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 	<h1>Mini Scrabble</h1>
 	<section class="scores">
-		<h2 id="player1Score">Player 1: <span></span></h2>
-		<h2 id="player2Score">Player 2: <span></span></h2>
+		<h2 id="player1Score">Player 1: <span>0</span></h2>
+		<h2 id="player2Score">Player 2: <span>0</span></h2>
 	</section>
 	<table>
 		<tr>
@@ -114,16 +114,9 @@
 		</tr>
 	</table>
 	<section id="player-tiles">
-		<div class="tile" id="tile1"></div>
-		<div class="tile" id="tile2"></div>
-		<div class="tile" id="tile3"></div>
-		<div class="tile" id="tile4"></div>
-		<div class="tile" id="tile5"></div>
-		<div class="tile" id="tile6"></div>
-		<div class="tile" id="tile7"></div>
 	</section>
 	<section id="buttons">
-		<button id="submitMove">play turn</button>
+		<button id="submitMove">submit</button>
 		<button id="reset">reset game</button>
 	</section>
 </body>
